fix swipe on firefox when on top of images

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -42,7 +42,6 @@ html, body {
 
       .slider-img {
         /* width and height are set dynamically in JS for better consistency */
-        -webkit-user-drag: none;
         user-select: none;
         cursor: grab;
         /* margin is set dynamically in JS for better consistency */
